<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/quantum_white_100"
    tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nav"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/toppng"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                        <TextView
                            android:id="@+id/navtext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/archivo_black"
                            android:text="@string/welcome"
                            android:textColor="#FFFFFF"
                            android:textSize="34sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="150dp"
                            android:layout_marginStart="20dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--<androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="10dp"
                    app:cardBackgroundColor="#F1F1F1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nav"
                    >

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                                <ImageView
                                    android:id="@+id/imgcard"
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/map"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/cardheader"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="10dp"
                                    android:fontFamily="@font/archivo_black"
                                    android:text="@string/desc3"
                                    android:textColor="#616161"
                                    android:textSize="18sp"
                                    app:layout_constraintStart_toEndOf="@id/imgcard"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"/>

                                <TextView
                                    android:id="@+id/carddesc"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/alata"
                                    android:text="@string/desc"
                                    android:textColor="#616161"
                                    android:textSize="10sp"
                                    android:textStyle="bold"
                                    android:layout_marginHorizontal="15dp"
                                    app:layout_constraintTop_toBottomOf="@id/cardheader"
                                    app:layout_constraintStart_toEndOf="@id/imgcard"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>-->



                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="10dp"
                    app:cardBackgroundColor="#F1F1F1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nav"
                    >

                        <androidx.constraintlayout.widget.ConstraintLayout
                           android:id="@+id/cardConstraint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imgcard1"
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/drug"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    />

                                <TextView
                                    android:id="@+id/cardheader1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="10dp"
                                    android:fontFamily="@font/archivo_black"
                                    android:text="@string/desc1"
                                    android:textColor="#616161"
                                    android:textSize="18sp"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/imgcard1"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    />

                                <TextView
                                    android:id="@+id/carddesc1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:fontFamily="@font/alata"
                                    android:text="@string/desc2"
                                    android:textColor="#616161"
                                    android:textSize="10sp"
                                    android:textStyle="bold"
                                    app:layout_constraintTop_toBottomOf="@id/cardheader1"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/imgcard1"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginHorizontal="15dp"
                                    />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card3"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="10dp"
                    app:cardBackgroundColor="#F1F1F1"
                    app:layout_constraintStart_toStartOf="@id/card1"
                    app:layout_constraintTop_toBottomOf="@id/card1"
                    >

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                                <ImageView
                                    android:id="@+id/imgcard3"
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/map"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/cardheader3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="10dp"
                                    android:fontFamily="@font/archivo_black"
                                    android:text="@string/desc3"
                                    android:textColor="#616161"
                                    android:textSize="18sp"
                                    app:layout_constraintStart_toEndOf="@id/imgcard3"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"/>

                                <TextView
                                    android:id="@+id/carddesc3"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginHorizontal="15dp"
                                    android:fontFamily="@font/alata_font"
                                    android:text="@string/desc"
                                    android:textColor="#616161"
                                    android:textSize="10sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/imgcard3"
                                    app:layout_constraintTop_toBottomOf="@id/cardheader3" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="10dp"
                    app:cardBackgroundColor="#F1F1F1"
                    app:layout_constraintStart_toStartOf="@id/card3"
                    app:layout_constraintTop_toBottomOf="@id/card3"
                    >

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/cardConstraint1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imgcard2"
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/application"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    android:padding="15dp"
                                    />

                                <TextView
                                    android:id="@+id/cardheader2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="10dp"
                                    android:fontFamily="@font/archivo_black"
                                    android:text="@string/cardheader2"
                                    android:textColor="#616161"
                                    android:textSize="18sp"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/imgcard2"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    />

                                <TextView
                                    android:id="@+id/carddesc2"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:fontFamily="@font/alata"
                                    android:text="@string/carddesc2"
                                    android:textColor="#616161"
                                    android:textSize="10sp"
                                    android:textStyle="bold"
                                    app:layout_constraintTop_toBottomOf="@id/cardheader2"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/imgcard2"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginHorizontal="15dp"
                                    />


                        </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.core.widget.NestedScrollView>